# fairplay

./: Cargo.toml  index.html
graph_editor/: Cargo.toml
src/: fairplay.rs  main.rs  update.rs  view.rs
src/interface/: components.rs  editing.rs  editing_components.rs  graph.rs  histogram.rs  home.rs  mod.rs
src/interface/graph_editor/: circle.rs  editor.rs  mod.rs  node.rs  theme.rs
src/models/: history.rs  mod.rs  modifier.rs  node.rs
src/services/: functions.rs  image.rs  mod.rs
