[package]
name = "fairplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rfd = { version = "0.14.0", default-features = false, features = ["tokio", "xdg-portal"] }
image = "0.25.0"
undo = "0.48.0"
once_cell = "1.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.12.1", features = ["wgpu", "image", "tokio"] }
iced_aw = { version = "0.8.0", features = ["icons", "split", "spinner", "menu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.12.1", features = ["webgl", "image", "tokio", "canvas"] }
iced_aw = { version = "0.8.0", default-features = false, features = ["icons", "menu"] }
